[metadata]
name = pandoc-remove-codelisting-filter
version = 1.0.0
author = Kenta Arai
license = MIT License

[options]
packages = find:
install_requires =
    pandocfilters

[options.entry_points]
console_scripts =
    pandoc_remove_codelisting_filter = pandoc_remove_codelisting_filter.pandoc_remove_codelisting_filter:main
