[metadata]
name = pandoc_remove_codelisting_filter
version = 1.1.0
author = Kenta Arai
license = MIT License

[options]
packages = find:
install_requires =
    pandocfilters

[options.entry_points]
console_scripts =
    pandoc_remove_codelisting_filter = pandoc_remove_codelisting_filter.pandoc_remove_codelisting_filter:main
